# Variant

./: README.md
include/: Variant.h
test/: CMakeLists.txt  main.cpp
